--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,42 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    
+   <!-- Favicon SVG avec stéthoscope médical en bleu -->
+    <link rel="icon" type="image/svg+xml" 
+      href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><linearGradient id="blueBg" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:%230ea5e9;stop-opacity:1" /><stop offset="100%" style="stop-color:%231e40af;stop-opacity:1" /></linearGradient></defs><circle cx="50" cy="50" r="45" fill="url(%23blueBg)"/><g fill="none" stroke="white" stroke-width="3" stroke-linecap="round"><path d="M30 25 Q30 15 40 15 Q50 15 50 25 Q50 35 40 35 Q30 35 30 25"/><path d="M70 25 Q70 15 60 15 Q50 15 50 25 Q50 35 60 35 Q70 35 70 25"/><path d="M40 35 Q45 45 50 55 Q55 45 60 35"/><path d="M50 55 L50 75"/><circle cx="50" cy="80" r="8" stroke-width="4"/></g><circle cx="50" cy="80" r="4" fill="red"/></svg>' />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Medical React Web App" />
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Médecine Web App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>JavaScript doit être activé pour utiliser ce site.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
